Add UMA to determine how often we offline a page with previews.

We suspect that page previews may be causing problems with offline
pages.  To understand the severity of the problem, we'll add a new
histogram that measures how often we turn on previews while offlining
a page.

BUG=703875

Review-Url: https://codereview.chromium.org/2916253002
Cr-Commit-Position: refs/heads/master@{#478483}

Former-commit-id: 61b63cbc244f348331c91d78402eb843bd185408